<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_query">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="sort_order">Sort Order</string>
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="date">Date</string>
    <string name="news_desk">"News\nDesk\nValues"</string>
    <string name="share">Share</string>
</resources>
