<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adv_srch_opts"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.codepath.nytimessearch.fragments.AdvSrchOptsDialogFragment">

    <EditText
        android:id="@+id/etBeginDate"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/sort_order"
        android:entries="@array/sort_order_array"/>

    <CheckBox
        android:id="@+id/cbArts"
        android:text="@string/arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/cbFashion"
        android:text="@string/fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/cbSports"
        android:text="@string/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>